[workspace]
resolver = "2"
members = [
  "crates/jstz_api",
  "crates/jstz_cli",
  "crates/jstz_client",
  "crates/jstz_core",
  "crates/jstz_crypto",
  "crates/jstz_runtime",
  "crates/kernels/jstz_kernel",
  "crates/kernels/jstz_lightweight_kernel",
  "crates/jstz_mock",
  "crates/jstz_node",
  "crates/jstz_oracle_node",
  "crates/jstz_proto",
  "crates/kernels/jstz_riscv_wpt_test_kernel",
  "crates/jstz_sdk",
  "crates/jstz_tps_bench",
  "crates/jstz_utils",
  "crates/jstz_wpt",
  "crates/jstzd",
  "crates/octez",
]

[workspace.package]
edition = "2021"
version = "0.1.1-alpha.5"
authors = ["TriliTech <contact@trili.tech>"]
repository = "https://github.com/jstz-dev/jstz"
homepage = "https://github.com/jstz-dev/jstz"
documentation = "https://jstz.tezos.com/"
readme = "README.md"
license-file = "LICENSE"
description = "JavaScript server runtime for Tezos Smart Rollups"

[workspace.dependencies]
anyhow = "1.0.82"
assert_cmd = "2.0.14"
async-dropper-simple = { version = "0.2.6", features = ["tokio"] }
async-trait = "0.1.82"
axum = "0.7.7"
base64 = "0.21.7"
bincode = { version = "2.0.0-rc.3", features = ["derive", "serde"] }
bip39 = { version = "2.1.0", features = ["rand"] }
boa_engine = { version = "0.19.0", features = ["fuzz"] }
boa_gc = "0.19.0"
bollard = "0.16.1"
bytes = "1.4.0"
chrono = { version = "0.4.34", default-features = false, features = ["std"] }
clap = { version = "^4.4", features = ["derive"] }
clap_complete = "4.4.10"
console = "0.15.8"
cryptoxide = { version = "0.4.4", default-features = false, features = ["sha2", "blake2"] }
ctrlc = "3.4.2"
deno_core = "0.336.0"
deno_error = "0.5.5"
deno_url = "0.190.0"
deno_web = "0.221.0"
deno_webidl = "0.190.0"
derive_more = "0.99.17"
dialoguer = "0.11.0"
dirs = "3.0"
either = "1.9.0"
encoding_rs = "0.8.33"
env_logger = "0.11.1"
erased-serde = "0.4.2"
expect-test = "1.4.1"
fastrand = "2.0.1"
figment = { version = "0.10.12", features = ["json", "env"] }
form_urlencoded = "1.2.0"
fs_extra = "1.2"
futures = "0.3"
futures_core = "0.2.3"
futures-util = "0.3.30"
getrandom = { version = "0.2.12", features = ["custom"] }
hex = "0.4.3"
hyper = "1.6.0"
http = "1.0.0"
http-serde = "2.0.0"
in-container = "^1"
indexmap = "2.6.0"
indicatif = "0.17.0"
libsecp256k1 = { version = "0.7", default-features = false, features = [
  "static-context",
  "hmac",
  "std",
] }
log = "0.4.20"
mockito = "1.7.0"
nix = { version = "^0.27.1", features = ["process", "signal"] }
nom = "7.1.3"
num-traits = "0.2.16"
num-bigint = "0.4.6"
once_cell = "1.21.3"
p256 = { version = "0.9", default-features = false, features = ["ecdsa", "std"] }
parking_lot = { version = "0.12", features = ["arc_lock"] }
pin-project = "1.1.10"
predicates = "3.1.0"
prettytable = "0.10.0"
pretty_assertions = "1.4.1"
proptest = "1.1"
r2d2 = "0.8"
r2d2_sqlite = "0.22"
rand = "0.8"
regex = "1"
reqwest = { version = "0.11.24", features = ["json", "blocking","stream"] }
reqwest-eventsource = "0.5.0"
rexpect = "0.6.0"
rusqlite = "0.29"
rust_decimal = "1.37.1"
rust-embed = { version = "8.5.0", features = ["interpolate-folder-path", "include-exclude"] }
rustyline = "14.0.0"
serde = { version = "1.0.196", features = ["derive", "rc"] }
serde-big-array = "0.5.1"
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.107"
serde_with = { version = "3.6.1", features = ["macros", "base64"] }
serde_bytes = "0.11.17"
sha2 = "0.10.9"
signal-hook = "0.3.17"
simple_asn1 = "0.6.3"
syntect = "5.2.0"
tempfile = "3.10.0"
thiserror = "1.0.69"
tl = "0.7.7"
tokio = { version = "1.36.0", features = ["full"] }
tokio-retry2 = "0.5.7"
tokio-stream = "0.1.14"
tokio-util = "0.7.10"
tower = "0.5.2"
tower-http = { version = "0.6.1", features = ["cors"] }
url = { version = "2.4.1", features = ["serde"] }
urlpattern = "0.2.0"
utoipa = { version = "5.1.3", features = ["axum_extras", "url"] }
utoipa-axum = "0.1.1"
utoipa-scalar = { version = "0.2.0", features = ["axum"] }
warp = "0.3.7"
wasm-bindgen = "0.2.92"
futures-core = "0.3.31"
ron = "0.8"

[workspace.dependencies.deno_fetch_base]
git = "https://github.com/jstz-dev/deno"
branch = "leo/request-response-transfer"
features = ["sandbox"]
default-features = false

[workspace.dependencies.tezos-smart-rollup]
git = "https://github.com/jstz-dev/tezos"
rev = "0e21f47f1be4564f95c61a6cf32d02a03e87180c"
default-features = false
features = [
  "std",
  "crypto",
  "panic-hook",
  "data-encoding",
  "storage",
  "proto-alpha",
  "utils",
]

[workspace.dependencies.tezos-smart-rollup-host]
git = "https://github.com/jstz-dev/tezos"
rev = "0e21f47f1be4564f95c61a6cf32d02a03e87180c"
features = ["proto-alpha"]

[workspace.dependencies.tezos-smart-rollup-core]
git = "https://github.com/jstz-dev/tezos"
rev = "0e21f47f1be4564f95c61a6cf32d02a03e87180c"

[workspace.dependencies.tezos-smart-rollup-mock]
git = "https://github.com/jstz-dev/tezos"
rev = "0e21f47f1be4564f95c61a6cf32d02a03e87180c"

[workspace.dependencies.tezos_data_encoding]
git = "https://github.com/jstz-dev/tezos"
rev = "0e21f47f1be4564f95c61a6cf32d02a03e87180c"

[workspace.dependencies.tezos-smart-rollup-debug]
git = "https://github.com/jstz-dev/tezos"
rev = "0e21f47f1be4564f95c61a6cf32d02a03e87180c"

[workspace.dependencies.tezos-smart-rollup-encoding]
git = "https://github.com/jstz-dev/tezos"
rev = "0e21f47f1be4564f95c61a6cf32d02a03e87180c"
default-features = false
features = ["alloc", "tezos-encoding", "crypto"]

[workspace.dependencies.tezos-smart-rollup-entrypoint]
git = "https://github.com/jstz-dev/tezos"
rev = "0e21f47f1be4564f95c61a6cf32d02a03e87180c"


[workspace.dependencies.tezos-smart-rollup-panic-hook]
git = "https://github.com/jstz-dev/tezos"
rev = "0e21f47f1be4564f95c61a6cf32d02a03e87180c"

[workspace.dependencies.tezos-smart-rollup-storage]
git = "https://github.com/jstz-dev/tezos"
rev = "0e21f47f1be4564f95c61a6cf32d02a03e87180c"

[workspace.dependencies.tezos-smart-rollup-installer-config]
git = "https://github.com/jstz-dev/tezos"
rev = "0e21f47f1be4564f95c61a6cf32d02a03e87180c"

[workspace.dependencies.tezos-smart-rollup-constants]
git = "https://github.com/jstz-dev/tezos"
rev = "0e21f47f1be4564f95c61a6cf32d02a03e87180c"

[workspace.dependencies.tezos-smart-rollup-installer]
git = "https://github.com/jstz-dev/tezos"
rev = "0e21f47f1be4564f95c61a6cf32d02a03e87180c"

[workspace.dependencies.tezos_crypto_rs]
git = "https://github.com/jstz-dev/tezos"
rev = "0e21f47f1be4564f95c61a6cf32d02a03e87180c"
default-features = false

[workspace.dependencies.deno_console]
git = "https://github.com/jstz-dev/deno"
branch = "v2.1.10-jstz"

[workspace.dependencies.octez-riscv]
# Fork with some custom patches that expose APIs. Will be replaced once the changes are upstreamed.
git = "https://github.com/huancheng-trili/riscv-pvm"
rev = "6b530863daa11cb4e6ea0ae9202a73f44c0d2d48"

[patch.crates-io]
boa_ast = { git = "https://github.com/trilitech/boa.git", branch = "ajob410@fix/remove-wasm-bindgen-from-time" }
boa_engine = { git = "https://github.com/trilitech/boa.git", branch = "ajob410@fix/remove-wasm-bindgen-from-time" }
boa_gc = { git = "https://github.com/trilitech/boa.git", branch = "ajob410@fix/remove-wasm-bindgen-from-time" }
boa_interner = { git = "https://github.com/trilitech/boa.git", branch = "ajob410@fix/remove-wasm-bindgen-from-time" }
boa_macros = { git = "https://github.com/trilitech/boa.git", branch = "ajob410@fix/remove-wasm-bindgen-from-time" }
boa_parser = { git = "https://github.com/trilitech/boa.git", branch = "ajob410@fix/remove-wasm-bindgen-from-time" }
boa_profiler = { git = "https://github.com/trilitech/boa.git", branch = "ajob410@fix/remove-wasm-bindgen-from-time" }
