[package]
name = "jstz_api"
authors.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
boa_engine = "0.17.0"
boa_gc = "0.17.0"
derive_more = "0.99.17"
jstz_core.workspace = true
jstz_crypto.workspace = true
serde = "1.0.188"
serde_json = "1.0.105"
tezos-smart-rollup = "0.2.1"
