[package]
name = "jstz_api"
authors.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
boa_engine = "0.17.0"
boa_gc = "0.17.0"
tezos-smart-rollup-host = "0.2.1"
derive_more = "0.99.17"
erased-serde = "0.3.28"
serde = "1.0.183"
jstz_core.workspace = true
jstz_crypto.workspace = true
jstz_ledger.workspace = true
serde_json = "1.0.105"
