[package]
name = "jstz_api"
authors.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
base64 = "0.21.4"
boa_engine = "0.17.0"
boa_gc = "0.17.0"
bytes = "1.4.0"
derive_more = "0.99.17"
escape_string = "0.1.2"
form_urlencoded = "1.2.0"
http = "0.2.9"
jstz_core.workspace = true
jstz_crypto.workspace = true
serde = "1.0.188"
serde_json = "1.0.107"
tezos-smart-rollup = "0.2.1"
url = "2.4.1"
