[package]
name = "jstz_cli"
authors.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "^4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bs58 = "0.4"
hex = "0.4"
dirs = "3.0"
nix = "0.20"
jstz_kernel.workspace = true
jstz_crypto.workspace = true
http = "0.2.9"
fs_extra = "1.2"
anyhow = "1.0.75"
daemonize = "0.5.0"
tempfile = "3.8.0"
signal-hook = "0.3.17"

[[bin]]
name = "jstz"
path = "src/main.rs"
