[[bin]]
name = "main_app"
path = "src/main.rs"

[[bin]]
name = "sandbox_process"
path = "src/sandbox_process.rs"

[package]
name = "jstz-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "^4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nom = "7"
bs58 = "0.4"
hex = "0.4"
ctrlc = "3.1"
tempfile = "3.2"
dirs = "3.0"
nix = "0.20"
jstz_kernel.workspace = true
jstz_crypto.workspace = true
http = "0.2.9"
fs_extra = "1.2" 
tokio = { version = "1", features = ["full"] }
jstz_proto.workspace = true

[[bin]]
name = "jstz"
path = "src/main.rs"

