[package]
name = "jstz_cli"
authors.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jstz_kernel.workspace = true
jstz_crypto.workspace = true
jstz_proto.workspace = true
jstz_core.workspace = true
jstz_api.workspace = true
clap = { version = "^4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bs58 = "0.4"
hex = "0.4"
dirs = "3.0"
nix = "^0.20.2"
http = "0.2.9"
fs_extra = "1.2"
anyhow = "1.0.75"
daemonize = "0.5.0"
tempfile = "3.8.0"
signal-hook = "0.3.17"
rustyline = "12.0.0"
boa_engine = { version = "0.17.0", features = ["fuzz"] }
tezos-smart-rollup = "0.2.1"
tezos-smart-rollup-mock = "0.2.1"
tezos-smart-rollup-installer-config = "0.2.1"
serde_yaml = "0.8"
tezos_crypto_rs = "0.5.1"
sha2 = "0.9"
rand = "0.8"
tiny-bip39 = "1.0.0"

[[bin]]
name = "jstz"
path = "src/main.rs"
