[package]
name = "jstz_core"
authors.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
boa_engine = "0.17.0"
boa_gc = "0.17.0"
tezos-smart-rollup-host = { path = "../../tezos/src/kernel_sdk/host" }
getrandom = { version = "0.2.10", features = ["custom"] }
derive_more = "0.99.17"
bincode = "1.3.3"
erased-serde = "0.3.28"
serde = "1.0.183"
