[package]
name = "jstz_kernel"
authors.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
jstz_core.workspace = true
jstz_api.workspace = true
tezos-smart-rollup = { path = "../../tezos/src/kernel_sdk/sdk" }
