[package]
name = "jstz_kernel"
authors.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
jstz_core.workspace = true
jstz_proto.workspace = true
jstz_crypto.workspace = true
tezos-smart-rollup = "0.2.1"
tezos_crypto_rs = { version = "0.5.0", default-features = false }
serde = "1.0.185"
num-traits = "0.2.16"
serde_json = "1.0.105"
boa_engine = "0.17.0"
