[package]
name = "jstz_node"
edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
anyhow = "1.0.75"
clap = { version = "^4.0", features = ["derive"] }
env_logger = "0.10.0"
hex = "0.4.3"
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.183", features = ["derive"] }
thiserror = "1.0.50"
