[package]
name = "jstz_proto"
authors.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
derive_more = "0.99.17"
erased-serde = "0.3.28"
serde = "1.0.183"
jstz_core.workspace = true
jstz_crypto.workspace = true
serde_json = "1.0.105"
boa_engine = "0.17.0"
boa_gc = "0.17.0"
tezos-smart-rollup = "0.2.1"
jstz_api.workspace = true

[dev-dependencies]
tezos-smart-rollup-mock = "0.2.1"
