[package]
name = "jstz_wpt"
edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "^4.0", features = ["derive"] }
ctrlc = "3.4.1"
nix = { version = "0.27.1", features = ["signal"] }
regex = "1.10.2"
reqwest = { version = "0.11.22", features = ["blocking"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
tl = "0.7.7"
tokio = { version = "1.33.0", features = ["full"] }
url = "2.4.1"

[[bin]]
name = "jstz-wpt"
path = "src/main.rs"
