[package]
name = "jstz_api"
authors.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
license-file.workspace = true
description.workspace = true

[dependencies]
base64 = "0.21.7"
boa_engine = "0.17.0"
boa_gc = "0.17.0"
bytes = "1.4.0"
derive_more = "0.99.17"
form_urlencoded = "1.2.0"
http = "1.0.0"
jstz_core.workspace = true
jstz_crypto.workspace = true
serde = "1.0.196"
serde_json = "1.0.107"
tezos-smart-rollup.workspace = true
url = "2.4.1"
urlpattern = "0.2.0"
encoding_rs = "0.8.33"
fastrand = "2.0.1"
clap = { version = "^4.5", features = ["derive"] }

[dev-dependencies]
anyhow = "1.0.75"
expect-test = "1.4.1"
jstz_wpt.workspace = true
tokio = { version = "1.36.0", features = ["full"] }
tezos-smart-rollup-mock = "0.2.2"
