[package]
name = "jstz_api"
authors.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
license-file.workspace = true
description.workspace = true

[dependencies]
base64.workspace = true
boa_engine.workspace = true 
boa_gc.workspace = true
bytes.workspace = true
clap.workspace = true
derive_more.workspace = true
encoding_rs.workspace = true
fastrand.workspace = true
form_urlencoded.workspace = true
http.workspace = true
jstz_core = { path = "../jstz_core" }
jstz_crypto = { path = "../jstz_crypto" }
serde.workspace = true 
serde_json.workspace = true
tezos-smart-rollup.workspace = true
url.workspace = true
urlpattern.workspace = true
utoipa.workspace = true

[dev-dependencies]
anyhow.workspace = true
expect-test.workspace = true
jstz_wpt = { path = "../jstz_wpt" }
tezos-smart-rollup-mock.workspace = true
tokio.workspace = true

[features]
skip-wpt = []
