[package]
name = "jstz_cli"
authors.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
license-file.workspace = true
description = "👨‍⚖️ jstz CLI"
include = ["src"]
default-run = "jstz"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
bip39.workspace = true
boa_engine.workspace = true
bollard.workspace = true
clap.workspace = true 
clap_complete.workspace = true
console.workspace = true
derive_more.workspace = true
dialoguer.workspace = true
dirs.workspace = true
env_logger.workspace = true
futures-util.workspace = true
futures.workspace = true
hex.workspace = true
http.workspace = true
in-container.workspace = true
jstz_api = { path = "../jstz_api" }
jstz_client = { path = "../jstz_client" }
jstz_core = { path = "../jstz_core" }
jstz_crypto = { path = "../jstz_crypto" }
jstz_proto = { path = "../jstz_proto" }
log.workspace = true
octez = { path = "../octez" }
regex.workspace = true
reqwest.workspace = true
reqwest-eventsource.workspace = true
rustyline.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
signal-hook.workspace = true
syntect.workspace = true
tempfile.workspace = true
tezos-smart-rollup-mock.workspace = true
tezos-smart-rollup.workspace = true
tezos_crypto_rs.workspace = true
tokio.workspace = true
url.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
jstzd = { path = "../jstzd" }
mockito.workspace = true
predicates.workspace = true
rexpect.workspace = true

[features]
skip-rollup-tests = []
v2_runtime = ["jstz_proto/v2_runtime"]

[[bin]]
name = "jstz"
path = "src/main.rs"
