[package]
name = "jstz_core"
authors.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
license-file.workspace = true
description.workspace = true

[dependencies]
bincode.workspace = true
boa_engine.workspace = true 
boa_gc.workspace = true
chrono.workspace = true
derive_more.workspace = true
erased-serde.workspace = true
getrandom.workspace = true
jstz_crypto = { path = "../jstz_crypto" }
serde.workspace = true
tezos-smart-rollup-host.workspace = true
tezos-smart-rollup.workspace = true
tezos_data_encoding.workspace = true
nom.workspace = true

[dev-dependencies]
anyhow.workspace = true 
expect-test.workspace = true
jstz_crypto = { path = "../jstz_crypto" } 
tezos-smart-rollup-mock.workspace = true
tokio.workspace = true
