[package]
name = "jstz_core"
authors.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
license-file.workspace = true
description.workspace = true

[dependencies]
bincode.workspace = true
boa_engine.workspace = true 
boa_gc.workspace = true
clap.workspace = true
chrono.workspace = true
derive_more = { workspace = true, features = [ "deref", "deref_mut", "from" ] }
erased-serde.workspace = true
getrandom.workspace = true
jstz_crypto = { path = "../jstz_crypto" }
nom.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde-big-array.workspace = true
serde_json.workspace = true
serde_with.workspace = true
tezos_crypto_rs.workspace = true
tezos_data_encoding.workspace = true
tezos-smart-rollup.workspace = true
tezos-smart-rollup-constants.workspace = true
tezos-smart-rollup-host.workspace = true
thiserror.workspace = true
utoipa.workspace = true
hex.workspace = true

[dev-dependencies]
anyhow.workspace = true
expect-test.workspace = true
jstz_crypto = { path = "../jstz_crypto" } 
tezos-smart-rollup-mock.workspace = true
tokio.workspace = true
url.workspace = true

[features]
unsafe_async_host = []
simulation = []
