[package]
name = "jstz_crypto"
authors.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
license-file.workspace = true
description.workspace = true

[dependencies]
anyhow.workspace = true
bincode.workspace = true
boa_gc.workspace = true
derive_more.workspace = true
hex.workspace = true
jstz_macro = { path = "../jstz_macro" }
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
tezos_crypto_rs.workspace = true
utoipa.workspace = true

[dev-dependencies]
proptest.workspace = true
bincode.workspace = true
